# scikit-keras

./: .buildinfo  .travis.yml  README.md  azure-pipelines.yml  conftest.py  environment.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py
.doctrees/: environment.pickle  index.doctree
.doctrees/_static/: index.doctree  skkeras.doctree
.github/workflows/: ci.yml  docs.yml
_modules/: functools.html  index.html
_modules/skkeras/: architecture.html  base.html
_sources/: index.rst.txt
_sources/_static/: index.rst.txt  skkeras.rst.txt
_static/: Makefile  conf.py  documentation_options.js  index.html  make.bat  skkeras.html
docs/: Makefile  conf.py  index.rst  modules.rst  skkeras.rst
skkeras/: __init__.py  architecture.py  base.py  build_fn.py  models.py  scikit_learn.py
tests/: scikit_learn_test.py  test_architecture.py  test_base.py  test_build_fn.py  test_scikit_learn.py
